# interview-pillot

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  GEMINI.md  README.md  pyproject.toml
backend/api/: dependencies.py  main.py
backend/api/middlewares/: exceptions.py
backend/api/routes/: questions.py
backend/api/schemas/: service_response.py
backend/application/services/: question_service.py
backend/domain/models/: question.py
backend/domain/ports/: ai_service.py
backend/infrastructure/adapters/: adk_adapter.py
backend/tests/integration/: test_questions_api.py
backend/tests/unit/: test_question_service.py
frontend/: vercel.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: GenerateForm.css  GenerateForm.jsx  Hero.css  Hero.jsx  Navbar.css  Navbar.jsx  QuestionCard.css  QuestionCard.jsx
